[package]
name = "gpx-analyzer"
version = "0.1.0"
authors = ["cleme"]
edition = "2018"

[profile.dev]
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[dependencies]
rayon = "1.3.1"
quick-xml = "0.18.1"
geo-types = "0.6.0"
geo = "0.14.0"
structopt = { version = "0.3.15", features = [ "paw" ] }
paw = "1.0.0"
chrono = "0.4.11"
