[package]
name = "gpx-analyzer"
version = "0.1.0"
authors = ["Clemens Wasser <clemens.wasser@gmail.com>"]
edition = "2018"

[profile.release]
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[dependencies]
rayon = "1.5.1"
quick-xml = "0.22.0"
geo-types = "0.7.2"
geo = "0.18.0"
clap = "3.0.0-beta.2"
chrono = "0.4.19"
